// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`проверка Authorization 1`] = `
<div
  className="Authorization"
>
  <label>
    Введите логин:
  </label>
  <br />
  <input
    autoFocus={true}
    className="inputText"
    name="nameUser"
    onChange={[Function]}
    type="text"
    value=""
  />
  <br />
  <span>
    
  </span>
  <br />
  <br />
  
</div>
`;

exports[`проверка Authorization 2`] = `
<div
  className="Authorization"
>
  <label>
    Введите логин:
  </label>
  <br />
  <input
    autoFocus={true}
    className="inputText"
    name="nameUser"
    onChange={[Function]}
    type="text"
    value="sdfasdf"
  />
  <br />
  <span>
    Нет такого сотрудника
  </span>
  <br />
  <br />
  <input
    className="button"
    disabled={false}
    onPointerDown={[Function]}
    type="button"
    value="[Войти]"
  />
</div>
`;

exports[`проверка Authorization 3`] = `
<div
  className="Authorization"
>
  <label>
    Введите логин:
  </label>
  <br />
  <input
    autoFocus={true}
    className="inputText"
    name="nameUser"
    onChange={[Function]}
    type="text"
    value="ivanov0"
  />
  <br />
  <span>
    Нет такого сотрудника
  </span>
  <br />
  <br />
  <input
    className="button"
    disabled={false}
    onPointerDown={[Function]}
    type="button"
    value="[Войти]"
  />
</div>
`;

exports[`проверка Authorization 4`] = `
<div
  className="Authorization"
>
  <label>
    Введите логин:
  </label>
  <br />
  <input
    autoFocus={true}
    className="inputText"
    name="nameUser"
    onChange={[Function]}
    type="text"
    value="saveliev47"
  />
  <br />
  <span>
    
  </span>
  <br />
  <br />
  <input
    className="button"
    disabled={false}
    onPointerDown={[Function]}
    type="button"
    value="[Войти]"
  />
</div>
`;

exports[`проверка ввода 1`] = `
<div
  className="ChangeEmp"
>
  <h2
    style={
      Object {
        "color": "#fbfc55 ",
        "marginLeft": "1vw",
        "textAlign": "center",
      }
    }
  >
    Внесение изменений в карточку сотрудника
     
    Кулаков Иван Иванович
  </h2>
  <label
    className="label"
  >
    Уровень доступа:
    <br />
    <select
      autoFocus={true}
      className="inputText"
      name="level"
      onChange={[Function]}
      value={2}
    >
      <option
        value={1}
      >
        Уровень доступа 1
      </option>
      <option
        value={2}
      >
        Уровень доступа 2
      </option>
      <option
        value={3}
      >
        Уровень доступа 3
      </option>
    </select>
  </label>
  <label
    className="label"
  >
    Почта:
    <br />
    <input
      className="inputText"
      name="email"
      onChange={[Function]}
      type="text"
      value="kulakov@example.com"
    />
    <span
      style={
        Object {
          "color": "black",
        }
      }
    >
      
    </span>
  </label>
  <label
    className="label"
  >
    Телефон:
    <br />
    <input
      className="inputText"
      name="phone"
      onChange={[Function]}
      type="text"
      value="294389052"
    />
    <span
      style={
        Object {
          "color": "black",
        }
      }
    >
      
    </span>
  </label>
  <label
    className="label"
  >
    Отдел:
    <br />
    <select
      className="inputText"
      name="department"
      onChange={[Function]}
      value="Складское хозяйство"
    >
      <option
        value="Руководство"
      >
        Руководство
      </option>
      <option
        value="Отдел закупок"
      >
        Отдел закупок
      </option>
      <option
        value="Отдел продаж"
      >
        Отдел продаж
      </option>
      <option
        value="Транспортный отдел"
      >
        Транспортный отдел
      </option>
      <option
        value="Бухгалтерия"
      >
        Бухгалтерия
      </option>
      <option
        value="Отдел кадров"
      >
        Отдел кадров
      </option>
      <option
        value="Складское хозяйство"
      >
        Складское хозяйство
      </option>
    </select>
  </label>
  <label
    className="label"
  >
    Должность:
    <br />
    <input
      className="inputText"
      name="position"
      onChange={[Function]}
      type="text"
      value="Начальник отдела"
    />
    <span
      style={
        Object {
          "color": "black",
        }
      }
    >
      
    </span>
  </label>
  <input
    className="button"
    onPointerDown={[Function]}
    type="button"
    value="[Сохранить]"
  />
  <input
    className="button"
    onPointerDown={[Function]}
    type="button"
    value="[Выйти без сохранения]"
  />
</div>
`;

exports[`проверка ввода 2`] = `
<div
  className="ChangeEmp"
>
  <h2
    style={
      Object {
        "color": "#fbfc55 ",
        "marginLeft": "1vw",
        "textAlign": "center",
      }
    }
  >
    Внесение изменений в карточку сотрудника
     
    Кулаков Иван Иванович
  </h2>
  <label
    className="label"
  >
    Уровень доступа:
    <br />
    <select
      autoFocus={true}
      className="inputText"
      name="level"
      onChange={[Function]}
      value={2}
    >
      <option
        value={1}
      >
        Уровень доступа 1
      </option>
      <option
        value={2}
      >
        Уровень доступа 2
      </option>
      <option
        value={3}
      >
        Уровень доступа 3
      </option>
    </select>
  </label>
  <label
    className="label"
  >
    Почта:
    <br />
    <input
      className="inputText"
      name="email"
      onChange={[Function]}
      type="text"
      value="dad@errr.com"
    />
    <span
      style={
        Object {
          "color": "black",
        }
      }
    >
      
    </span>
  </label>
  <label
    className="label"
  >
    Телефон:
    <br />
    <input
      className="inputText"
      name="phone"
      onChange={[Function]}
      type="text"
      value="\\"295559052\\""
    />
    <span
      style={
        Object {
          "color": "black",
        }
      }
    >
      Содержит 9 цифр
    </span>
  </label>
  <label
    className="label"
  >
    Отдел:
    <br />
    <select
      className="inputText"
      name="department"
      onChange={[Function]}
      value="Руководство"
    >
      <option
        value="Руководство"
      >
        Руководство
      </option>
      <option
        value="Отдел закупок"
      >
        Отдел закупок
      </option>
      <option
        value="Отдел продаж"
      >
        Отдел продаж
      </option>
      <option
        value="Транспортный отдел"
      >
        Транспортный отдел
      </option>
      <option
        value="Бухгалтерия"
      >
        Бухгалтерия
      </option>
      <option
        value="Отдел кадров"
      >
        Отдел кадров
      </option>
      <option
        value="Складское хозяйство"
      >
        Складское хозяйство
      </option>
    </select>
  </label>
  <label
    className="label"
  >
    Должность:
    <br />
    <input
      className="inputText"
      name="position"
      onChange={[Function]}
      type="text"
      value="Рукамиводитель"
    />
    <span
      style={
        Object {
          "color": "black",
        }
      }
    >
      
    </span>
  </label>
  <input
    className="button"
    onPointerDown={[Function]}
    type="button"
    value="[Выйти без сохранения]"
  />
</div>
`;

exports[`проверка нажатия на кнопку войти 1`] = `
<div
  className="Authorization"
>
  <label>
    Введите логин:
  </label>
  <br />
  <input
    autoFocus={true}
    className="inputText"
    name="nameUser"
    onChange={[Function]}
    type="text"
    value=""
  />
  <br />
  <span>
    
  </span>
  <br />
  <br />
  
</div>
`;

exports[`проверка нажатия на кнопку войти 2`] = `
<div
  className="Authorization"
>
  <label>
    Введите логин:
  </label>
  <br />
  <input
    autoFocus={true}
    className="inputText"
    name="nameUser"
    onChange={[Function]}
    type="text"
    value="ivanov0"
  />
  <br />
  <span>
    Нет такого сотрудника
  </span>
  <br />
  <br />
  <input
    className="button"
    disabled={false}
    onPointerDown={[Function]}
    type="button"
    value="[Войти]"
  />
</div>
`;

exports[`проверка нажатия на кнопку войти 3`] = `
<div
  className="Authorization"
>
  <label>
    Введите логин:
  </label>
  <br />
  <input
    autoFocus={true}
    className="inputText"
    name="nameUser"
    onChange={[Function]}
    type="text"
    value="ivanov0"
  />
  <br />
  <span>
    Нет такого сотрудника
  </span>
  <br />
  <br />
  <input
    className="button"
    disabled={false}
    onPointerDown={[Function]}
    type="button"
    value="[Войти]"
  />
</div>
`;

exports[`проверка нажатия на кнопку войти 4`] = `
<div
  className="Authorization"
>
  <label>
    Введите логин:
  </label>
  <br />
  <input
    autoFocus={true}
    className="inputText"
    name="nameUser"
    onChange={[Function]}
    type="text"
    value="ivanov0"
  />
  <br />
  <span>
    Нет такого сотрудника
  </span>
  <br />
  <br />
  <input
    className="button"
    disabled={false}
    onPointerDown={[Function]}
    type="button"
    value="[Войти]"
  />
</div>
`;

exports[`проверка некорректного ввода 1`] = `
<div
  className="ChangeEmp"
>
  <h2
    style={
      Object {
        "color": "#fbfc55 ",
        "marginLeft": "1vw",
        "textAlign": "center",
      }
    }
  >
    Внесение изменений в карточку сотрудника
     
    Кулаков Иван Иванович
  </h2>
  <label
    className="label"
  >
    Уровень доступа:
    <br />
    <select
      autoFocus={true}
      className="inputText"
      name="level"
      onChange={[Function]}
      value={2}
    >
      <option
        value={1}
      >
        Уровень доступа 1
      </option>
      <option
        value={2}
      >
        Уровень доступа 2
      </option>
      <option
        value={3}
      >
        Уровень доступа 3
      </option>
    </select>
  </label>
  <label
    className="label"
  >
    Почта:
    <br />
    <input
      className="inputText"
      name="email"
      onChange={[Function]}
      type="text"
      value="kulakov@example.com"
    />
    <span
      style={
        Object {
          "color": "black",
        }
      }
    >
      
    </span>
  </label>
  <label
    className="label"
  >
    Телефон:
    <br />
    <input
      className="inputText"
      name="phone"
      onChange={[Function]}
      type="text"
      value="294389052"
    />
    <span
      style={
        Object {
          "color": "black",
        }
      }
    >
      
    </span>
  </label>
  <label
    className="label"
  >
    Отдел:
    <br />
    <select
      className="inputText"
      name="department"
      onChange={[Function]}
      value="Складское хозяйство"
    >
      <option
        value="Руководство"
      >
        Руководство
      </option>
      <option
        value="Отдел закупок"
      >
        Отдел закупок
      </option>
      <option
        value="Отдел продаж"
      >
        Отдел продаж
      </option>
      <option
        value="Транспортный отдел"
      >
        Транспортный отдел
      </option>
      <option
        value="Бухгалтерия"
      >
        Бухгалтерия
      </option>
      <option
        value="Отдел кадров"
      >
        Отдел кадров
      </option>
      <option
        value="Складское хозяйство"
      >
        Складское хозяйство
      </option>
    </select>
  </label>
  <label
    className="label"
  >
    Должность:
    <br />
    <input
      className="inputText"
      name="position"
      onChange={[Function]}
      type="text"
      value="Начальник отдела"
    />
    <span
      style={
        Object {
          "color": "black",
        }
      }
    >
      
    </span>
  </label>
  <input
    className="button"
    onPointerDown={[Function]}
    type="button"
    value="[Сохранить]"
  />
  <input
    className="button"
    onPointerDown={[Function]}
    type="button"
    value="[Выйти без сохранения]"
  />
</div>
`;

exports[`проверка некорректного ввода 2`] = `
<div
  className="ChangeEmp"
>
  <h2
    style={
      Object {
        "color": "#fbfc55 ",
        "marginLeft": "1vw",
        "textAlign": "center",
      }
    }
  >
    Внесение изменений в карточку сотрудника
     
    Кулаков Иван Иванович
  </h2>
  <label
    className="label"
  >
    Уровень доступа:
    <br />
    <select
      autoFocus={true}
      className="inputText"
      name="level"
      onChange={[Function]}
      value={2}
    >
      <option
        value={1}
      >
        Уровень доступа 1
      </option>
      <option
        value={2}
      >
        Уровень доступа 2
      </option>
      <option
        value={3}
      >
        Уровень доступа 3
      </option>
    </select>
  </label>
  <label
    className="label"
  >
    Почта:
    <br />
    <input
      className="inputText"
      name="email"
      onChange={[Function]}
      type="text"
      value="daderrr.com"
    />
    <span
      style={
        Object {
          "color": "black",
        }
      }
    >
      Формат ввода: login@example.com
    </span>
  </label>
  <label
    className="label"
  >
    Телефон:
    <br />
    <input
      className="inputText"
      name="phone"
      onChange={[Function]}
      type="text"
      value="\\"29555ппп9052\\""
    />
    <span
      style={
        Object {
          "color": "black",
        }
      }
    >
      Содержит 9 цифр
    </span>
  </label>
  <label
    className="label"
  >
    Отдел:
    <br />
    <select
      className="inputText"
      name="department"
      onChange={[Function]}
      value="Руководство"
    >
      <option
        value="Руководство"
      >
        Руководство
      </option>
      <option
        value="Отдел закупок"
      >
        Отдел закупок
      </option>
      <option
        value="Отдел продаж"
      >
        Отдел продаж
      </option>
      <option
        value="Транспортный отдел"
      >
        Транспортный отдел
      </option>
      <option
        value="Бухгалтерия"
      >
        Бухгалтерия
      </option>
      <option
        value="Отдел кадров"
      >
        Отдел кадров
      </option>
      <option
        value="Складское хозяйство"
      >
        Складское хозяйство
      </option>
    </select>
  </label>
  <label
    className="label"
  >
    Должность:
    <br />
    <input
      className="inputText"
      name="position"
      onChange={[Function]}
      type="text"
      value="рукамиводитель"
    />
    <span
      style={
        Object {
          "color": "black",
        }
      }
    >
      Первая буква заглавная; только кириллица
    </span>
  </label>
  <input
    className="button"
    onPointerDown={[Function]}
    type="button"
    value="[Выйти без сохранения]"
  />
</div>
`;

exports[`проверка правильности значений инпутов при открытии карточки 1`] = `
<div
  className="ChangeEmp"
>
  <h2
    style={
      Object {
        "color": "#fbfc55 ",
        "marginLeft": "1vw",
        "textAlign": "center",
      }
    }
  >
    Внесение изменений в карточку сотрудника
     
    Кулаков Иван Иванович
  </h2>
  <label
    className="label"
  >
    Уровень доступа:
    <br />
    <select
      autoFocus={true}
      className="inputText"
      name="level"
      onChange={[Function]}
      value={2}
    >
      <option
        value={1}
      >
        Уровень доступа 1
      </option>
      <option
        value={2}
      >
        Уровень доступа 2
      </option>
      <option
        value={3}
      >
        Уровень доступа 3
      </option>
    </select>
  </label>
  <label
    className="label"
  >
    Почта:
    <br />
    <input
      className="inputText"
      name="email"
      onChange={[Function]}
      type="text"
      value="kulakov@example.com"
    />
    <span
      style={
        Object {
          "color": "black",
        }
      }
    >
      
    </span>
  </label>
  <label
    className="label"
  >
    Телефон:
    <br />
    <input
      className="inputText"
      name="phone"
      onChange={[Function]}
      type="text"
      value="294389052"
    />
    <span
      style={
        Object {
          "color": "black",
        }
      }
    >
      
    </span>
  </label>
  <label
    className="label"
  >
    Отдел:
    <br />
    <select
      className="inputText"
      name="department"
      onChange={[Function]}
      value="Складское хозяйство"
    >
      <option
        value="Руководство"
      >
        Руководство
      </option>
      <option
        value="Отдел закупок"
      >
        Отдел закупок
      </option>
      <option
        value="Отдел продаж"
      >
        Отдел продаж
      </option>
      <option
        value="Транспортный отдел"
      >
        Транспортный отдел
      </option>
      <option
        value="Бухгалтерия"
      >
        Бухгалтерия
      </option>
      <option
        value="Отдел кадров"
      >
        Отдел кадров
      </option>
      <option
        value="Складское хозяйство"
      >
        Складское хозяйство
      </option>
    </select>
  </label>
  <label
    className="label"
  >
    Должность:
    <br />
    <input
      className="inputText"
      name="position"
      onChange={[Function]}
      type="text"
      value="Начальник отдела"
    />
    <span
      style={
        Object {
          "color": "black",
        }
      }
    >
      
    </span>
  </label>
  <input
    className="button"
    onPointerDown={[Function]}
    type="button"
    value="[Сохранить]"
  />
  <input
    className="button"
    onPointerDown={[Function]}
    type="button"
    value="[Выйти без сохранения]"
  />
</div>
`;

exports[`проверка рендера кнопки при верном логине 1`] = `
<div
  className="Authorization"
>
  <label>
    Введите логин:
  </label>
  <br />
  <input
    autoFocus={true}
    className="inputText"
    name="nameUser"
    onChange={[Function]}
    type="text"
    value=""
  />
  <br />
  <span>
    
  </span>
  <br />
  <br />
  
</div>
`;

exports[`проверка рендера кнопки при верном логине 2`] = `
<div
  className="Authorization"
>
  <label>
    Введите логин:
  </label>
  <br />
  <input
    autoFocus={true}
    className="inputText"
    name="nameUser"
    onChange={[Function]}
    type="text"
    value="ivanov0"
  />
  <br />
  <span>
    Нет такого сотрудника
  </span>
  <br />
  <br />
  <input
    className="button"
    disabled={false}
    onPointerDown={[Function]}
    type="button"
    value="[Войти]"
  />
</div>
`;
